<resources>
    <string name="app_name">FitMe</string>
    <string name="get_started">Get started</string>
    <string name="resend_in">Resend in %d</string>
    <string name="email">Email</string>
    <string name="empty">Field error</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="password_length">Password length should be more than 6 characters</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="alarm">Alarm</string>
    <string name="tv_score">Person Score: %.2f</string>
    <string name="counter">Counter: </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="save">Save</string>
    <string name="view_more">More</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stop">stop</string>
    <string name="hour_format">%1$02d</string>
    <string name="type_alarm_name">Type alarm name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="exercises_format">%d exercises</string>
    <string name="workouts">Workouts</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all_my">All my</string>
    <string name="my_activities">My Activities</string>
    <string name="start">start</string>
    <string name="zero">0</string>
    <string name="stop_exercise_confirmation">Are you sure you want to finish exercise?</string>
    <string name="yes">Yes</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="calories_format">%d calories were burned out</string>
    <string name="time_waste_format">%d seconds spent</string>
    <string name="counter_format">%d counts</string>
    <string name="plan">Plan</string>
    <string name="minutes_format">%d minutes</string>
    <string name="dots" translatable="false">...</string>
    <string name="back">Back</string>
    <string name="wrong_exercise">Inappropriate exercise</string>
    <string name="error_activity_name">Please type name for exercise</string>

    <string-array name="categories_arra_en">
        <item>reps</item>
        <item>calories</item>
        <item>seconds</item>
    </string-array>

    <string-array name="categories_array_kg">
        <item>конугуулорум</item>
        <item>калорияларым</item>
        <item>мунотум</item>
    </string-array>

    <string-array name="plan_array">
        <item>-</item>
        <item>Weight Loss</item>
        <item>Weight Gain</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rank">Rank</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_an_account">Create an Account</string>
    <string name="join_to_our_sport_community">Join to our sport community</string>
    <string name="reset_email_sent">Link for reset your password is sent to your email</string>
    <string name="track_your_activities">Track Your Activities</string>
    <string name="boarding_desc">Keeping track of your progress is a great way to stay motivated to exercise. Use these tracking tools to help stick to your exercise routine and see your progress!</string>
    <string name="kg_locale" translatable="false">ky</string>
    <string name="en_locale" translatable="false">en</string>
    <string name="select_language">Please select language</string>
    <string name="kyrgyz">Kyrgyz</string>
    <string name="english">English</string>

</resources>