<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.cardview.widget.CardView
        android:id="@+id/tv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_gravity="start|center_vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.H1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Profile" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/phone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/page_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/page_margin"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/medium_margin"
            android:textSize="@dimen/text_normal_3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_first_name"
            android:layout_marginTop="@dimen/element_margin"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/page_margin"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/medium_margin"
            android:textSize="@dimen/text_normal_3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_last_name"
            android:layout_marginTop="@dimen/element_margin"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/page_margin"
            android:hint="@string/age"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/medium_margin"
            android:textSize="@dimen/text_normal_3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_age"
            android:layout_marginTop="@dimen/element_margin"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/page_margin"
            android:hint="@string/weight"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/medium_margin"
            android:textSize="@dimen/text_normal_3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_weight"
            android:layout_marginTop="@dimen/element_margin"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/page_margin"
            android:hint="@string/height"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/medium_margin"
            android:textSize="@dimen/text_normal_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_height">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_plan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_margin"
                android:background="@drawable/bg_input_field"
                android:drawablePadding="@dimen/page_margin"
                android:gravity="center"
                android:hint="@string/plan"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/page_margin"
                android:paddingVertical="@dimen/medium_margin"
                android:textSize="@dimen/text_normal_3" />

            <Spinner
                android:id="@+id/btn_filter_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_margin"
                android:backgroundTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/tv_chart_title"
                app:layout_constraintStart_toEndOf="@+id/tv_chart_title"
                app:layout_constraintTop_toTopOf="@+id/tv_chart_title"
                tools:listitem="@layout/item_spinner" />
        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        android:layout_marginTop="@dimen/page_margin"
        android:backgroundTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/Button.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/save"
        android:background="@drawable/bg_button_state"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>