<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/element_margin"
    android:paddingTop="@dimen/page_margin">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_activity"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerInside"
        android:elevation="@dimen/small_margin"
        android:src="@drawable/ic_stretching"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_calories_quantity"
        style="@style/Text.Regular.Mini_2"
        android:paddingHorizontal="@dimen/element_margin"
        android:text="@string/calories_format"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_counter_quantity"
        style="@style/Text.Regular.Mini_2"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingHorizontal="@dimen/element_margin"
        android:text="@string/counter_format"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_calories_quantity"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_time_quantity"
        style="@style/Text.Regular.Mini_2"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingHorizontal="@dimen/element_margin"
        android:text="@string/time_waste_format"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_counter_quantity"
        app:layout_goneMarginTop="@dimen/element_margin"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        style="@style/Text.Regular.Mini_1"
        android:paddingHorizontal="@dimen/element_margin"
        app:layout_goneMarginTop="@dimen/element_margin"
        android:layout_marginTop="@dimen/element_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_activity"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Text.Regular.Normal_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin"
        android:layout_marginBottom="@dimen/page_margin"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time_quantity"
        tools:text="Push 3" />

</androidx.constraintlayout.widget.ConstraintLayout>